public interface PagoFactura {
    
    public void pagarFactura(String factura);

}
