public interface Retiro {
    
    public void retirar(double monto);
}
