public interface Transferencia {
    
    public void transferir(double monto);
}
